Opt: optimize flow event message